--- a/InterfaceOpenCallMVC/Views/Shared/_Layout.cshtml
+++ b/InterfaceOpenCallMVC/Views/Shared/_Layout.cshtml
@@ -76,6 +76,7 @@
             &copy; 2021 - InterfaceOpenCallMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="js/script.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
